<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="android.mvvm.mg.com.mvvm_android.fragments.account.viewModel.AccountViewModel" />

        <variable
            name="handler"
            type="android.mvvm.mg.com.mvvm_android.fragments.account.IAccountHandler" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context=".fragments.account.view.AccountFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/image_size_1"
                android:layout_height="@dimen/image_size_1"
                android:layout_marginTop="@dimen/activity_medium_margin"
                android:scaleType="centerCrop"
                app:setImageUrl="@{viewModel.imagePath}"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_for_content"
                android:text="@{viewModel.email}"
                android:textSize="@dimen/text_size_8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_custom_medium_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{(view) -> handler.onCardsClick(view)}"
                    android:text="@string/account_button_cards" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_small_margin"
                    android:onClick="@{(view) -> handler.onPaymentHistoryClick(view)}"
                    android:text="@string/account_button_payment_history" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_small_margin"
                    android:onClick="@{(view) -> handler.onSettingsClick(view)}"
                    android:text="@string/account_button_settings" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_custom_extra_large_margin"
                    android:onClick="@{(view) -> handler.onLogoutClick(view)}"
                    android:text="@string/account_button_logout" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>